add source and back link

--- a/style.css
+++ b/style.css
@@ -76,3 +76,42 @@ body{
 #total {
     font-weight: 600;
 }
+
+.source_back{
+    float: right;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.source_link{
+    text-decoration: none;
+    background-color: #3F5EFB;
+    color: #fff;
+    padding: 5px;
+    border-radius: 10px;
+    transition: 0.3s ease;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.source_link:hover{
+    transform: scale(1.01);
+    box-shadow: 0px 0px 5px 8px rgba(63, 94, 251, 0.2);
+}
+
+.back_link{
+    text-decoration: none;
+    background-color: #FC466B;
+    color: #fff;
+    padding: 5px;
+    border-radius: 10px;
+    transition: 0.3s ease;
+    font-size: 18px;
+    text-align: center;
+}
+
+.back_link:hover{
+    transform: scale(1.01);
+    box-shadow: 0px 0px 5px 8px rgba(252, 70, 107, 0.2);
+}
